--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@supabase/supabase-js": "^2.39.1",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/node": "^20",
