--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "@prisma/client": "^5.7.1",
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.1",
+    "argon2": "^0.31.2",
     "chart.js": "^4.4.1",
     "next": "14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "prisma": "^5.7.1",
